--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,13 @@ set(LIBGDF_INCLUDE_DIR ${LIBGDF_ROOT}/src/libgdf/include)
 ExternalProject_Add(libgdf_ep
 	CMAKE_ARGS -DCMAKE_BUILD_TYPE=RELEASE 
 	PREFIX ${LIBGDF_ROOT}
-	DOWNLOAD_COMMAND git clone --recursive https://github.com/gpuopenanalytics/libgdf.git
+	DOWNLOAD_COMMAND git clone --recursive https://github.com/BlazingDB/libgdf.git
 	UPDATE_COMMAND ""
 	PATCH_COMMAND ""
 	BINARY_DIR ${LIBGDF_ROOT}/src/libgdf
 	SOURCE_DIR ${LIBGDF_ROOT}/src/libgdf
 	INSTALL_DIR ${LIBGDF_ROOT}/bin
-	CONFIGURE_COMMAND git checkout 0033bec && cmake .
+	CONFIGURE_COMMAND git checkout binary-operators-draft && cmake -DCMAKE_BUILD_TYPE=Release -DBINARY_OPERATION_VERSION:STRING=V2 .
 	BUILD_COMMAND make -j8
 	INSTALL_COMMAND ""
 	BUILD_BYPRODUCTS ${LIBGDF_LIB_DIR}/libgdf.so
@@ -56,4 +56,4 @@ set_target_properties(libgdf PROPERTIES IMPORTED_LOCATION ${LIBGDF_LIB_DIR}/libg
 add_dependencies(libgdf libgdf_ep)
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
-target_link_libraries(testing-libgdf libgdf)
+target_link_libraries(testing-libgdf libgdf cuda nvrtc)
