Use the branch binary-operators-draft for blazingdb/libgdf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ ExternalProject_Add(libgdf_ep
 	BINARY_DIR ${LIBGDF_ROOT}/src/libgdf
 	SOURCE_DIR ${LIBGDF_ROOT}/src/libgdf
 	INSTALL_DIR ${LIBGDF_ROOT}/bin
-	CONFIGURE_COMMAND git checkout binary-operators-master && cmake -DCMAKE_BUILD_TYPE=Release -DBINARY_OPERATION_VERSION:STRING=V2 .
+	CONFIGURE_COMMAND git checkout binary-operators-draft && cmake -DCMAKE_BUILD_TYPE=Release -DBINARY_OPERATION_VERSION:STRING=V2 .
 	BUILD_COMMAND make -j8
 	INSTALL_COMMAND ""
 	BUILD_BYPRODUCTS ${LIBGDF_LIB_DIR}/libgdf.so
