--- a/.gitignore
+++ b/.gitignore
@@ -31,12 +31,26 @@
 *.out
 *.app
 
+# Folders
+build/
+thirdparty/
+/testing-libgdf
+
 # Eclipse generated files by cmake
 .cproject
 .project
+
+# CMake generated files
+LastTest.log
+cmake_install.cmake
+CMakeCache.txt
+CTestTestfile.cmake
+Makefile
+CTestCostData.txt
+DartConfiguration.tcl
+Testing/
+*DartConfiguration.tcl
 CMakeCache.txt
 CMakeFiles/
 Makefile
 cmake_install.cmake
-thirdparty/
-/testing-libgdf
