Add flatbuffers compiler support (rebuild schemas for the main target)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,15 @@ set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/testing-libgdf.cu
 
               ${CMAKE_CURRENT_SOURCE_DIR}/src/ipc/calcite_client.cpp
+              ${CMAKE_CURRENT_SOURCE_DIR}/src/protocol/MessageBuilder.cpp
 )
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
 # TODO percy do not use libgdf.so here and use gdf (the static lib) instead
 target_link_libraries(testing-libgdf libgdf.so ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY})
+
+# NOTE Each time we build the target testing-libgdf we will compile the flatbuffer schemas
+add_dependencies(testing-libgdf FlatBuffersSchemas)
 
 # Print the project summary
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
