--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,9 +9,15 @@ function(configure_test TEST_NAME Tests_SRCS)
     message(STATUS "${TEST_NAME} will link against: gdf arrow")
 
     cuda_add_executable(${TEST_NAME} ${Tests_SRCS})
-    target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest gdf arrow)
+    #target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest gdf arrow)
+    target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest)
     set_target_properties(${TEST_NAME} PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/gtests/")
+
+    set(LIBGDF_ROOT ${CMAKE_BINARY_DIR}/thirdparty/libgdf)
+    #set(LIBGDF_LIB_DIR ${LIBGDF_ROOT}/src/libgdf)
+    set(LIBGDF_INCLUDE_DIR ${LIBGDF_ROOT}/src/libgdf/include)
+    include_directories(${LIBGDF_INCLUDE_DIR})
 
     #register the target as CMake test so we can use ctest for this executable
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
