Adding some logical filter tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,16 +8,23 @@
 function(configure_test TEST_NAME Tests_SRCS)
     message(STATUS "${TEST_NAME} will link against: gdf arrow")
 
-    cuda_add_executable(${TEST_NAME} ${Tests_SRCS})
-    #target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest gdf arrow)
-    target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest)
-    set_target_properties(${TEST_NAME} PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/gtests/")
+    include_directories(${PROJECT_SOURCE_DIR}/src)
 
     set(LIBGDF_ROOT ${CMAKE_BINARY_DIR}/thirdparty/libgdf)
-    #set(LIBGDF_LIB_DIR ${LIBGDF_ROOT}/src/libgdf)
+    set(LIBGDF_LIB_DIR ${LIBGDF_ROOT}/src/libgdf)
+    link_directories(${LIBGDF_LIB_DIR})
+
+    #target_link_libraries(${TEST_NAME} libgdf.so ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY})
+
     set(LIBGDF_INCLUDE_DIR ${LIBGDF_ROOT}/src/libgdf/include)
     include_directories(${LIBGDF_INCLUDE_DIR})
+    message(STATUS "${LIBGDF_INCLUDE_DIR} include dir")
+
+    cuda_add_executable(${TEST_NAME} ${Tests_SRCS})
+    #target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest gdf arrow)
+    target_link_libraries(${TEST_NAME} gmock_main gmock GTest::GTest gdf)
+    set_target_properties(${TEST_NAME} PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/gtests/")
 
     #register the target as CMake test so we can use ctest for this executable
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
@@ -32,5 +39,6 @@ enable_testing()
 message(STATUS "******** Configuring tests ********")
 
 add_subdirectory(foo-sample)
+add_subdirectory(logical-filter)
 
 message(STATUS "******** Tests are ready ********")
