fixed issue in test and made process join compile

--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(calcite_interpreter_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
     ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
