Replacing all gdf_column* by gdf_column_cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,13 @@ include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOUR
 set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/CalciteInterpreter.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/ColumnManipulation.cu
-              ${CMAKE_CURRENT_SOURCE_DIR}/src/JoinProcessor.cpp
+#              ${CMAKE_CURRENT_SOURCE_DIR}/src/JoinProcessor.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/LogicalFilter.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/StringUtil.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/QueryState.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/Utils.cu
               ${CMAKE_CURRENT_SOURCE_DIR}/src/GDFCounter.cu
+              ${CMAKE_CURRENT_SOURCE_DIR}/src/GDFColumn.cu
               ${CMAKE_CURRENT_SOURCE_DIR}/src/testing-libgdf.cu
 
               ${CMAKE_CURRENT_SOURCE_DIR}/src/ipc/calcite_client.cpp
