--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(calcite_interpreter_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
-    ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
+#    ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
