Linking with the static LIBGDF version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,7 @@ set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
 )
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
-# TODO percy do not use libgdf.so here and use gdf (the static lib) instead
-target_link_libraries(testing-libgdf libgdf.so ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY})
+target_link_libraries(testing-libgdf libgdf.a ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY})
 
 # NOTE Each time we build the target testing-libgdf we will compile the flatbuffer schemas
 add_dependencies(testing-libgdf FlatBuffersSchemas)
