Enabling static linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
 )
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
-target_link_libraries(testing-libgdf libgdf.a BlazingDB::Protocol ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY} ${CUDA_NVTX_LIBRARY})
+target_link_libraries(testing-libgdf ${LIBGDF_STATIC_LIB} BlazingDB::Protocol ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY} ${CUDA_NVTX_LIBRARY})
 
 # NOTE Each time we build the target testing-libgdf we will compile the flatbuffer schemas
 add_dependencies(testing-libgdf FlatBuffersSchemas)
