Building is working

--- a/tests/logical-filter/CMakeLists.txt
+++ b/tests/logical-filter/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(logical_filter_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
