--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -29,6 +29,8 @@ enable_testing()
 # -------------------
 message(STATUS "******** Configuring tests ********")
 
+add_subdirectory(utils)
+
 add_subdirectory(foo-sample)
 add_subdirectory(logical-filter)
 add_subdirectory(calcite-interpreter)
