--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,5 +36,6 @@ add_subdirectory(logical-filter)
 add_subdirectory(calcite-interpreter)
 add_subdirectory(integration)
 add_subdirectory(dtypes)
+add_subdirectory(pjoins)
 
 message(STATUS "******** Tests are ready ********")
