Solved issues related to the WHERE clause, supported the AND operator, added some unit tests

--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -12,4 +12,19 @@ set(calcite_interpreter_test_SRCS
     calcite_interpreter-test.cu
 )
 
+set(calcite_interpreter_where_test_SRCS
+    ${CMAKE_SOURCE_DIR}/src/Utils.cu
+    ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
+    ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
+    ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
+    ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
+    ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
+    ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
+        ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
+    ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
+    calcite_interpreter-where-test.cu
+)
+
 configure_test(calcite-interpreter-test "${calcite_interpreter_test_SRCS}")
+configure_test(calcite-interpreter-where-test "${calcite_interpreter_where_test_SRCS}")
