[testdata-generator] Update where tests

--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -2,6 +2,7 @@ cuda_add_library(ral-test-utils
   ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
   ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
 )
+target_include_directories(ral-test-utils PUBLIC .)
 target_link_libraries(ral-test-utils
   ${LIBGDF_STATIC_LIB}
   ${CUDA_CUDA_LIBRARY}
