--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -28,3 +28,5 @@ set(calcite_interpreter_where_test_SRCS
 
 configure_test(calcite-interpreter-test "${calcite_interpreter_test_SRCS}")
 configure_test(calcite-interpreter-where-test "${calcite_interpreter_where_test_SRCS}")
+
+target_link_libraries(calcite-interpreter-where-test ral-test-utils)
