[testdata-generator] Add tests for gdf ref counter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,5 +37,6 @@ add_subdirectory(calcite-interpreter)
 add_subdirectory(integration)
 add_subdirectory(dtypes)
 add_subdirectory(pjoins)
+add_subdirectory(gdf-ref-counter)
 
 message(STATUS "******** Tests are ready ********")
