--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -39,5 +39,6 @@ add_subdirectory(dtypes)
 add_subdirectory(pjoins)
 add_subdirectory(evaluate_query)
 add_subdirectory(gdf-ref-counter)
+add_subdirectory(where)
 
 message(STATUS "******** Tests are ready ********")
