Query execution time added

--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -4,6 +4,7 @@ set(calcite_interpreter_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
+    ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
     ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
@@ -18,6 +19,7 @@ set(calcite_interpreter_where_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
+    ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
     ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
