--- a/tests/dtypes/CMakeLists.txt
+++ b/tests/dtypes/CMakeLists.txt
@@ -7,6 +7,7 @@ set(dtypes-test_SRCS
   ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
   ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
   ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
+  ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
   ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
   dtypes-test.cu)
 configure_test(dtypes-test "${dtypes-test_SRCS}")
