--- a/tests/integration/CMakeLists.txt
+++ b/tests/integration/CMakeLists.txt
@@ -4,6 +4,7 @@ set(integration_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
+    ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
     ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
