[tpch] update input generator and tpch generator

--- a/tests/tpch/CMakeLists.txt
+++ b/tests/tpch/CMakeLists.txt
@@ -1,4 +1,4 @@
-cuda_add_library(evaluate_query_interface
+cuda_add_library(tpch_interface
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
   ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
@@ -9,15 +9,15 @@ cuda_add_library(evaluate_query_interface
   ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
   ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
 )
-target_include_directories(evaluate_query_interface PUBLIC .)
-target_link_libraries(evaluate_query_interface
+target_include_directories(tpch_interface PUBLIC .)
+target_link_libraries(tpch_interface
   ${LIBGDF_STATIC_LIB}
   ${CUDA_CUDA_LIBRARY}
   ${CUDA_NVRTC_LIBRARY}
   ${CUDA_NVTX_LIBRARY}
 )
 
-configure_test(evaluate_query-test
-  evaluate_query.cu
+configure_test(tpch-test
+  tpch-tests.cu
 )
-target_link_libraries(evaluate_query-test evaluate_query_interface)
+target_link_libraries(tpch-test tpch_interface)
