--- a/tests/joins/CMakeLists.txt
+++ b/tests/joins/CMakeLists.txt
@@ -1,4 +1,19 @@
-cuda_add_library(fullouter_join_interface
+include_directories(
+    ${CMAKE_SOURCE_DIR}/thirdparty/jitify
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper)
+
+set(source_files
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/gdf-data.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/kernel.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/operation.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/code/traits.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/binop.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
+)
+
+set(the-test_SRCS
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
   ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
@@ -9,16 +24,10 @@ cuda_add_library(fullouter_join_interface
   ${CMAKE_SOURCE_DIR}/src/StringUtil.cpp
   ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
   ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
-)
-target_include_directories(fullouter_join_interface PUBLIC .)
-target_link_libraries(fullouter_join_interface
-  ${LIBGDF_STATIC_LIB}
-  ${CUDA_CUDA_LIBRARY}
-  ${CUDA_NVRTC_LIBRARY}
-  ${CUDA_NVTX_LIBRARY}
-)
-
-configure_test(fullouter_join-test
+  ${source_files}
   fullouter_join.cu
 )
-target_link_libraries(fullouter_join-test fullouter_join_interface)
+
+configure_test(fullouter_join-test "${the-test_SRCS}")
+
+#target_link_libraries(where-test ral-test-utils)
