Changed the test code due to the integration of the rmm functionality.

--- a/tests/calcite-interpreter/CMakeLists.txt
+++ b/tests/calcite-interpreter/CMakeLists.txt
@@ -49,3 +49,8 @@ configure_test(calcite-interpreter-test "${calcite_interpreter_test_SRCS}")
 configure_test(calcite-interpreter-where-test "${calcite_interpreter_where_test_SRCS}")
 
 target_link_libraries(calcite-interpreter-where-test ral-test-utils)
+
+target_link_libraries(calcite-interpreter-test
+                      ${cuDF_adapter_testing_library}
+                      ${cuDF_adapter_testing_dependencies}
+)
