--- a/tests/tpch/CMakeLists.txt
+++ b/tests/tpch/CMakeLists.txt
@@ -33,6 +33,8 @@ target_link_libraries(tpch_interface
   ${CUDA_CUDA_LIBRARY}
   ${CUDA_NVRTC_LIBRARY}
   ${CUDA_NVTX_LIBRARY}
+  ${cuDF_adapter_testing_library}
+  ${cuDF_adapter_testing_dependencies}
 )
 
 configure_test(tpch-test
