--- a/tests/gdf-ref-counter/CMakeLists.txt
+++ b/tests/gdf-ref-counter/CMakeLists.txt
@@ -5,6 +5,10 @@ set(NAME "gdf-ref-counter-${NAME}-test")
 set(SRCS ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu "${NAME}.cu")
 add_dependencies(gdf-ref-counter-tests ${NAME})
 configure_test(${NAME} "${SRCS}")
+target_link_libraries(${NAME}
+                      ${cuDF_adapter_testing_library}
+                      ${cuDF_adapter_testing_dependencies}
+)
 endfunction()
 
 add_gdf_ref_counter_test(contains)
