--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/io/data_provider/UriDataProvider.c
 message (STATUS   "lib blazing-io ${BLAZINGIO_STATIC_LIB}")
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
-target_link_libraries(testing-libgdf NVStrings gdf Boost::filesystem blazingdb-io  "${ARROW_STATIC_LIB}" rmm Google::Flatbuffers ${BLAZINGDB_PROTOCOL_STATIC_LIB} ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY} ${CUDA_NVTX_LIBRARY})
+target_link_libraries(testing-libgdf NVStrings gdf Boost::filesystem "${ARROW_STATIC_LIB}" blazingdb-io rmm Google::Flatbuffers ${BLAZINGDB_PROTOCOL_STATIC_LIB} ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY} ${CUDA_NVTX_LIBRARY})
 
 # Print the project summary
 #TODO cmake bug, it says blazingdb-protocol was not deteected vut everything seems
