--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,17 @@ set(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/io/data_provider/UriDataProvider.c
               ${binary_operation_source_files})
 
 cuda_add_executable(testing-libgdf ${SRC_FILES})
-target_link_libraries(testing-libgdf NVStrings "${ARROW_STATIC_LIB}" blazingdb-io rmm Google::Flatbuffers ${BLAZINGDB_PROTOCOL_STATIC_LIB} ${CUDA_CUDA_LIBRARY} ${CUDA_NVRTC_LIBRARY} ${CUDA_NVTX_LIBRARY})
+target_link_libraries(testing-libgdf
+    NVStrings
+    ${LIBGDF_STATIC_LIB}
+    ${ARROW_STATIC_LIB}
+    blazingdb-io
+    rmm
+    ${FLATBUFFERS_STATIC_LIB}
+    ${BLAZINGDB_PROTOCOL_STATIC_LIB}
+    ${CUDA_CUDA_LIBRARY}
+    ${CUDA_NVRTC_LIBRARY}
+    ${CUDA_NVTX_LIBRARY})
 
 # Print the project summary
 #TODO cmake bug, it says blazingdb-protocol was not deteected but everything seems
