Build the target with old C++ ABI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,15 @@
 cmake_minimum_required(VERSION 3.11)
 
 project(testing-cmake-libgdf)
-set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_CXX_STANDARD 11)
+
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 message(STATUS "Using C++ standard: c++${CMAKE_CXX_STANDARD}")
+
+# TODO percy felipe alexander remove these lines when cudf stop using old C++ ABI
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=0")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/" ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_MODULE_PATH:" "${CMAKE_MODULE_PATH}")
@@ -25,9 +29,15 @@ include(CheckIncludeFiles)
 include(CheckLibraryExists)
 include(CTest)
 
+# Configure CUDA
+include(ConfigureCUDA)
+
+# TODO percy felipe alexander remove these lines when cudf stop using old C++ ABI
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -D_GLIBCXX_USE_CXX11_ABI=0")
+message(AUTHOR_WARNING "Using old C++ ABI: -D_GLIBCXX_USE_CXX11_ABI=0")
+
 # NOTE Do not change the inclusion order
 # Configure dependencies
-include(ConfigureCUDA)
 include(ConfigureFlatBuffers)
 include(ConfigureArrow)
 include(ConfigureLibGDF)
